--- a/src/styles/Details.css
+++ b/src/styles/Details.css
@@ -1,5 +1,13 @@
 .details-header {
   display: flex;
+  background-color: rgb(93, 141, 180);
+}
+
+.details-title {
+  width: 100%;
+  text-align: left;
+  padding-left: 10px;
+  font-weight: bold;
 }
 
 .list-group-item:nth-child(odd) {
